--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -10,9 +10,9 @@
 
 @mixin bg-gradient($color1, $color2) {}
 
-.mfp-img {
-    max-width: 600px !important;
-}
+// .mfp-img {
+//     max-width: 600px !important;
+// }
 
 #contact {
     background: linear-gradient(to bottom, #000000, #2f2f2f);
